--- a/projects/project 01:color changer/color_changer.html
+++ b/projects/project 01:color changer/color_changer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="color_changer.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Learning DOM</title>
 </head>
 <body>
